--- a/index.html
+++ b/index.html
@@ -34,26 +34,26 @@ https://www.iconfinder.com/korawan_m
       <div class="collapse navbar-collapse" id="myNav">
         <ul class="navbar-nav mx-auto text-capitalize">
           <li class="nav-item active">
-            <a class="nav-link" href="#">home</a>
+            <a class="nav-link" href="#home">home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">about</a>
+            <a class="nav-link " href="#about">about</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">store</a>
+            <a class="nav-link" href="#store">store</a>
           </li>
         </ul>
         <div class="nav-info-items d-none d-lg-flex ">
           <!-- single info -->
           <div class="nav-info align-items-center d-flex justify-content-between mx-lg-5">
             <span class="info-icon mx-lg-3"><i class="fas fa-phone"></i></span>
-            <p class="mb-0">+ 256 752 853 816</p>
+            <p class="mb-0"> +256 752 853 816</p>
           </div>
           <!-- end of single info -->
           <!-- single info -->
           <div id="cart-info" class="nav-info align-items-center cart-info d-flex justify-content-between mx-lg-5">
             <span class="cart-info__icon mr-lg-3"><i class="fas fa-shopping-cart"></i></span>
-            <p class="mb-0 text-capitalize"><span id="item-count">2 </span> items - $<span class="item-total">10.49</span></p>
+            <p class="mb-0 text-capitalize"><span id="item-count">2 </span> items - Ug shs<span class="item-total">10,000</span></p>
           </div>
           <!-- end of single info -->
         </div>
@@ -75,8 +75,8 @@ https://www.iconfinder.com/korawan_m
             <div class="item-text">
 
               <p id="cart-item-title" class="font-weight-bold mb-0">cart item</p>
-              <span>$</span>
-              <span id="cart-item-price" class="cart-item-price" class="mb-0">10.99</span>
+              <span>Ug shs</span>
+              <span id="cart-item-price" class="cart-item-price" class="mb-0">10,000</span>
             </div>
             <a href="#" id='cart-item-remove' class="cart-item-remove">
               <i class="fas fa-trash"></i>
@@ -89,8 +89,8 @@ https://www.iconfinder.com/korawan_m
             <div class="cart-item-text">
 
               <p id="cart-item-title" class="font-weight-bold mb-0">cart item</p>
-              <span>$</span>
-              <span id="cart-item-price" class="cart-item-price" class="mb-0">10.99</span>
+              <span>Ug shs</span>
+              <span id="cart-item-price" class="cart-item-price" class="mb-0">10,000</span>
             </div>
             <a href="#" id='cart-item-remove' class="cart-item-remove">
               <i class="fas fa-trash"></i>
@@ -100,7 +100,7 @@ https://www.iconfinder.com/korawan_m
           <!-- cart total -->
           <div class="cart-total-container d-flex justify-content-around text-capitalize mt-5">
             <h5>total</h5>
-            <h5> $ <strong id="cart-total" class="font-weight-bold">10.00</strong> </h5>
+            <h5> Ug shs<strong id="cart-total" class="font-weight-bold">10,000</strong> </h5>
           </div>
           <!--end cart total -->
           <!-- cart buttons -->
@@ -128,7 +128,7 @@ https://www.iconfinder.com/korawan_m
         <div class="col-10 mx-auto col-md-6 my-5">
           <h1 class="text-capitalize">about <strong class="banner-title ">us</strong></h1>
           <p class="my-4 text-muted w-75"> We sell kid's products, you ask it and we bring it to you.</p>
-          <a href="#" class="btn btn-outline-secondary btn-black text-uppercase ">explore</a>
+          <a href="#store" class="btn btn-outline-secondary btn-black text-uppercase ">explore</a>
 
         </div>
         <div class="col-10 mx-auto col-md-6 align-self-center my-5">
