--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@ https://www.iconfinder.com/korawan_m
       <div class="row">
         <div class=" col-lg-8 mx-auto d-flex justify-content-around my-2 sortBtn flex-wrap">
           <a href="#" class="btn btn-outline-secondary btn-black text-uppercase filter-btn m-2" data-filter="all"> all</a>
-          <a href="#" class="btn btn-outline-secondary btn-black text-uppercase filter-btn m-2" data-filter="cakes">Boys</a>
-          <a href="#" class="btn btn-outline-secondary btn-black text-uppercase filter-btn m-2" data-filter="cupcakes">Girls</a>
-          <a href="#" class="btn btn-outline-secondary btn-black text-uppercase filter-btn m-2" data-filter="sweets">Latest</a>
-          <a href="#" class="btn btn-outline-secondary btn-black text-uppercase filter-btn m-2" data-filter="doughnuts">Boys and girls</a>
+          <a href="#" class="btn btn-outline-secondary btn-black text-uppercase filter-btn m-2" data-filter="boys">Boys</a>
+          <a href="#" class="btn btn-outline-secondary btn-black text-uppercase filter-btn m-2" data-filter="girls">Girls</a>
+          <a href="#" class="btn btn-outline-secondary btn-black text-uppercase filter-btn m-2" data-filter="Latest">Latest</a>
+          <a href="#" class="btn btn-outline-secondary btn-black text-uppercase filter-btn m-2" data-filter="boys and girls">Boys and girls</a>
         </div>
       </div>
       <!-- search box -->
@@ -181,7 +181,7 @@ https://www.iconfinder.com/korawan_m
       <!-- store  items-->
       <div class="row" class="store-items" id="store-items">
         <!-- single item -->
-        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item sweets" data-item="sweets">
+        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item sweets" data-item="boys">
           <div class="card ">
             <div class="img-container">
               <img src="images/boysclothes.jpg" height="400" class="card-img-top store-img" alt="">
@@ -191,7 +191,7 @@ https://www.iconfinder.com/korawan_m
             </div>
             <div class="card-body">
               <div class="card-text d-flex justify-content-between text-capitalize">
-                <h5 id="store-item-name">Clothes</h5>
+                <h5 id="store-item-name">Boys </h5>
                 <h5 class="store-item-value">Ug shs<strong id="store-item-price" class="font-weight-bold">7000</strong></h5>
 
               </div>
@@ -203,7 +203,7 @@ https://www.iconfinder.com/korawan_m
         </div>
         <!--end of single store item-->
         <!-- single item -->
-        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item cupcakes" data-item="cupcakes">
+        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item cupcakes" data-item="girls">
           <div class="card ">
             <div class="img-container">
               <img src="images/babygirls.jpeg"  height="400" class="card-img-top store-img" alt="">
@@ -213,7 +213,7 @@ https://www.iconfinder.com/korawan_m
             </div>
             <div class="card-body">
               <div class="card-text d-flex justify-content-between text-capitalize">
-                <h5 id="store-item-name"></h5>
+                <h5 id="store-item-name"> floral dresses</h5>
                 <h5 class="store-item-value">Ug shs <strong id="store-item-price" class="font-weight-bold">20,000</strong></h5>
 
               </div>
@@ -225,7 +225,7 @@ https://www.iconfinder.com/korawan_m
         </div>
         <!--end of single store item-->
         <!-- single item -->
-        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item cakes" data-item="cakes">
+        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item cakes" data-item="girls">
           <div class="card ">
             <div class="img-container">
               <img src="images/twopiece.jpeg" height="400" class="card-img-top store-img" alt="">
@@ -235,7 +235,7 @@ https://www.iconfinder.com/korawan_m
             </div>
             <div class="card-body">
               <div class="card-text d-flex justify-content-between text-capitalize">
-                <h5 id="store-item-name">Happy Kids</h5>
+                <h5 id="store-item-name">Sweater pants</h5>
                 <h5 class="store-item-value">Ug shs <strong id="store-item-price" class="font-weight-bold">25,000</strong></h5>
 
               </div>
@@ -247,7 +247,7 @@ https://www.iconfinder.com/korawan_m
         </div>
         <!--end of single store item-->
         <!-- single item -->
-        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item doughnuts" data-item="dougnuts">
+        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item doughnuts" data-item="latest">
           <div class="card ">
             <div class="img-container">
               <img src="images/newboyss.jpeg"  height="400" class="card-img-top store-img" alt="">
@@ -257,7 +257,7 @@ https://www.iconfinder.com/korawan_m
             </div>
             <div class="card-body">
               <div class="card-text d-flex justify-content-between text-capitalize">
-                <h5 id="store-item-name">Cute little babies</h5>
+                <h5 id="store-item-name">two piece</h5>
                 <h5 class="store-item-value">Uh shs <strong id="store-item-price" class="font-weight-bold">10,000</strong></h5>
 
               </div>
@@ -269,7 +269,7 @@ https://www.iconfinder.com/korawan_m
         </div>
         <!--end of single store item-->
         <!-- single item -->
-        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item sweets" data-item="sweets">
+        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item sweets" data-item="boys">
           <div class="card ">
             <div class="img-container">
               <img src="images/girl.jpg" height="400" class="card-img-top store-img" alt="">
@@ -279,7 +279,7 @@ https://www.iconfinder.com/korawan_m
             </div>
             <div class="card-body">
               <div class="card-text d-flex justify-content-between text-capitalize">
-                <h5 id="store-item-name">Clothes</h5>
+                <h5 id="store-item-name">Pitch dress</h5>
                 <h5 class="store-item-value">Ug shs <strong id="store-item-price" class="font-weight-bold">20,000</strong></h5>
 
               </div>
@@ -291,7 +291,7 @@ https://www.iconfinder.com/korawan_m
         </div>
         <!--end of single store item-->
         <!-- single item -->
-        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item cupcakes" data-item="cupcakes">
+        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item cupcakes" data-item="boys and girls">
           <div class="card ">
             <div class="img-container">
               <img src="images/girly.jpg" height="400" class="card-img-top store-img" alt="">
@@ -301,7 +301,7 @@ https://www.iconfinder.com/korawan_m
             </div>
             <div class="card-body">
               <div class="card-text d-flex justify-content-between text-capitalize">
-                <h5 id="store-item-name">Babies</h5>
+                <h5 id="store-item-name">Round dress</h5>
                 <h5 class="store-item-value">Ug shs <strong id="store-item-price" class="font-weight-bold">30,000</strong></h5>
 
               </div>
@@ -313,7 +313,7 @@ https://www.iconfinder.com/korawan_m
         </div>
         <!--end of single store item-->
         <!-- single item -->
-        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item cakes" data-item="cakes">
+        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item cakes" data-item="boys">
           <div class="card ">
             <div class="img-container">
               <img src="images/news.jpg" height="400" class="card-img-top store-img" alt="">
@@ -323,7 +323,7 @@ https://www.iconfinder.com/korawan_m
             </div>
             <div class="card-body">
               <div class="card-text d-flex justify-content-between text-capitalize">
-                <h5 id="store-item-name">Boy</h5>
+                <h5 id="store-item-name">overall suit</h5>
                 <h5 class="store-item-value">Uh shs <strong id="store-item-price" class="font-weight-bold">10,000</strong></h5>
 
               </div>
@@ -335,7 +335,7 @@ https://www.iconfinder.com/korawan_m
         </div>
         <!--end of single store item-->
         <!-- single item -->
-        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item doughnuts" data-item="dougnuts">
+        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item doughnuts" data-item="latest">
           <div class="card ">
             <div class="img-container">
               <img src="images/sweater.jpg" height="400" class="card-img-top store-img" alt="">
@@ -345,7 +345,7 @@ https://www.iconfinder.com/korawan_m
             </div>
             <div class="card-body">
               <div class="card-text d-flex justify-content-between text-capitalize">
-                <h5 id="store-item-name">Lol</h5>
+                <h5 id="store-item-name">Jumper</h5>
                 <h5 class="store-item-value">Ug shs <strong id="store-item-price" class="font-weight-bold">10,000</strong></h5>
 
               </div>
@@ -357,7 +357,7 @@ https://www.iconfinder.com/korawan_m
         </div>
         <!--end of single store item-->
         <!-- single item -->
-        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item sweets" data-item="sweets">
+        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item sweets" data-item="boys">
           <div class="card ">
             <div class="img-container">
               <img src="images/dope.jpg" height="400" class="card-img-top store-img" alt="">
@@ -367,7 +367,7 @@ https://www.iconfinder.com/korawan_m
             </div>
             <div class="card-body">
               <div class="card-text d-flex justify-content-between text-capitalize">
-                <h5 id="store-item-name">Dresses</h5>
+                <h5 id="store-item-name">Maroon dress</h5>
                 <h5 class="store-item-value">Ug shs <strong id="store-item-price" class="font-weight-bold">15,000</strong></h5>
 
               </div>
@@ -379,7 +379,7 @@ https://www.iconfinder.com/korawan_m
         </div>
         <!--end of single store item-->
         <!-- single item -->
-        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item cupcakes" data-item="cupcakes">
+        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item cupcakes" data-item="boys and girls">
           <div class="card ">
             <div class="img-container">
               <img src="images/cute.jpg" height="400" class="card-img-top store-img" alt="">
@@ -389,7 +389,7 @@ https://www.iconfinder.com/korawan_m
             </div>
             <div class="card-body">
               <div class="card-text d-flex justify-content-between text-capitalize">
-                <h5 id="store-item-name">Cute Girls</h5>
+                <h5 id="store-item-name">girly two piece</h5>
                 <h5 class="store-item-value">Ug shs <strong id="store-item-price" class="font-weight-bold">15,000</strong></h5>
 
               </div>
@@ -401,7 +401,7 @@ https://www.iconfinder.com/korawan_m
         </div>
         <!--end of single store item-->
         <!-- single item -->
-        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item cakes" data-item="cakes">
+        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item cakes" data-item="girls">
           <div class="card ">
             <div class="img-container">
               <img src="images/overall.jpg" height="400" class="card-img-top store-img" alt="">
@@ -411,8 +411,8 @@ https://www.iconfinder.com/korawan_m
             </div>
             <div class="card-body">
               <div class="card-text d-flex justify-content-between text-capitalize">
-                <h5 id="store-item-name">Boys and Girls</h5>
-                <h5 class="store-item-value">Ug shs <strong id="store-item-price" class="font-weight-bold">10500</strong></h5>
+                <h5 id="store-item-name">Overall</h5>
+                <h5 class="store-item-value">Ug shs <strong id="store-item-price" class="font-weight-bold">10,500</strong></h5>
 
               </div>
             </div>
@@ -423,7 +423,7 @@ https://www.iconfinder.com/korawan_m
         </div>
         <!--end of single store item-->
         <!-- single item -->
-        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item doughnuts" data-item="dougnuts">
+        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item doughnuts" data-item="latest">
           <div class="card ">
             <div class="img-container">
               <img src="images/lildress.jpg" height="400" class="card-img-top store-img" alt="">
@@ -433,7 +433,7 @@ https://www.iconfinder.com/korawan_m
             </div>
             <div class="card-body">
               <div class="card-text d-flex justify-content-between text-capitalize">
-                <h5 id="store-item-name">Dope Dresses</h5>
+                <h5 id="store-item-name">Demin dress</h5>
                 <h5 class="store-item-value">Ug shs <strong id="store-item-price" class="font-weight-bold">15,000</strong></h5>
 
               </div>
